Authorized by auth basic module

--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,8 @@
 server {
+    # ngx_http_auth_basic_module
+	#auth_basic "Restricted site";
+	#auth_basic_user_file /tmp/htpasswd;
+
     listen       80;
     listen  [::]:80;
     server_name  localhost;
@@ -50,6 +54,16 @@ server {
 	}
 
 	location /pdf {
+		# http://nginx.org/en/docs/http/ngx_http_auth_basic_module.html
+		# need auth under this entry
+		auth_basic "Restricted site";
+		auth_basic_user_file /tmp/htpasswd;
+		# the passwd file format like below:
+		# username:EncodeStringHere:[commment]
+		# echo -n 'username:' >> /tmp/htpasswd
+		# using openssl to encode the passwd rather then plane text via `openssl passwd >> /tmp/htpasswd`
+		# the htpasswd file content looks like as below
+
 		alias /pdf;
 		autoindex on;
 		charset utf-8; # support chinese file name
