--- a/default.conf
+++ b/default.conf
@@ -48,6 +48,7 @@ server {
 
 	location /zdoc {
 		alias /zdoc;
+		index README.html;
 		autoindex on;
 		charset utf-8; # support chinese file name
 		autoindex_exact_size off;
