--- a/default.conf
+++ b/default.conf
@@ -21,6 +21,13 @@ server {
 		index index.html index.htm;
 	}
 
+	location /golden {
+		alias /golden;
+		autoindex on;
+		charset utf-8; # support chinese file name
+		autoindex_exact_size off;
+	}
+
 	location /iso {
 		alias /iso;
 		autoindex on;
@@ -48,6 +55,14 @@ server {
 
 	location /zdoc {
 		alias /zdoc;
+		index README.html;
+		autoindex on;
+		charset utf-8; # support chinese file name
+		autoindex_exact_size off;
+	}
+
+	location /script {
+		alias /script;
 		index README.html;
 		autoindex on;
 		charset utf-8; # support chinese file name
