Nginx basic authorities password

--- a/default.conf
+++ b/default.conf
@@ -78,7 +78,7 @@ server {
 		# username:EncodeStringHere:[commment]
 		# echo -n 'username:' >> /tmp/htpasswd
 		# using openssl to encode the passwd rather then plane text via `openssl passwd >> /tmp/htpasswd`
-		# the htpasswd file content looks like as below
+		# echo "passwd-goes-here" | openssl passwd -stdin >> /tmp/htpasswd
 
 		alias /pdf;
 		autoindex on;
