Show content instead of download for some file
For example .log under script or all Dockerfile under dfc

--- a/default.conf
+++ b/default.conf
@@ -61,12 +61,32 @@ server {
 		autoindex_exact_size off;
 	}
 
+	location /dfc {
+		alias /dfc;
+		autoindex on;
+
+		# nginx determines the content type from the extension.
+		# If the file has no extension, it will use the default_type
+		types { }
+		#default_type text/html;
+		default_type text/plain;
+
+		charset utf-8; # support chinese file name
+		autoindex_exact_size off;
+	}
+
 	location /script {
 		alias /script;
 		index README.html;
 		autoindex on;
 		charset utf-8; # support chinese file name
 		autoindex_exact_size off;
+
+		# show log content instead of download
+		types {
+			# map extension .log to mime-type text/plan
+			text/plain log;
+		}
 	}
 
 	location /pdf {
