Spice and Vnc web client usage

--- a/default.conf
+++ b/default.conf
@@ -15,7 +15,13 @@ server {
         index  index.html index.htm;
     }
 
-	# http://serverio/qdoc
+	# http://serverip/spice
+	location /spice {
+		alias /spice;
+		index index.html index.htm spice.html;
+	}
+
+	# http://serverip/qdoc
 	location /qdoc {
 		alias /qemu;
 		index index.html index.htm;
