Genpass using default, while no set

--- a/default.conf
+++ b/default.conf
@@ -106,6 +106,9 @@ server {
 		# using openssl to encode the passwd rather then plane text via `openssl passwd >> /tmp/htpasswd`
 		# echo "passwd-goes-here" | openssl passwd -stdin >> /tmp/htpasswd
 
+		# PD=${PASSWD-"911"}
+		# echo $PD | openssl passwd -stdin >> /tmp/htpasswd
+
 		alias /pdf;
 		autoindex on;
 		charset utf-8; # support chinese file name
