--- a/default.conf
+++ b/default.conf
@@ -95,6 +95,13 @@ server {
 		}
 	}
 
+	location /res {
+		alias /res;
+		autoindex on;
+		charset utf-8; # support chinese file name
+		autoindex_exact_size off;
+	}
+
 	location /pdf {
 		# http://nginx.org/en/docs/http/ngx_http_auth_basic_module.html
 		# need auth under this entry
