Setup pass in script, encrypt zdoc page
config the password in run script
encrypt the zdoc page
add entry for pages

the password file now in the container

    docker exec -it web cat /tmp/htpasswd
    zero:eBhvkVZiwEiqg

--- a/default.conf
+++ b/default.conf
@@ -60,6 +60,9 @@ server {
 	}
 
 	location /zdoc {
+		auth_basic "Restricted site";
+		auth_basic_user_file /tmp/htpasswd;
+
 		alias /zdoc;
 		index README.html;
 		autoindex on;
@@ -102,6 +105,17 @@ server {
 		autoindex_exact_size off;
 	}
 
+	location /page {
+		alias /page;
+		default_type text/html;
+		    types {
+        text/html  mhtml;
+    }
+		autoindex on;
+		charset utf-8; # support chinese file name
+		autoindex_exact_size off;
+	}
+
 	location /pdf {
 		# http://nginx.org/en/docs/http/ngx_http_auth_basic_module.html
 		# need auth under this entry
@@ -115,6 +129,10 @@ server {
 
 		# PD=${PASSWD-"911"}
 		# echo $PD | openssl passwd -stdin >> /tmp/htpasswd
+
+		# for example username zero with password 0
+		# echo -n 'zero:' >> /tmp/htpasswd
+		# echo "0" | openssl passwd -stdin >> /tmp/htpasswd
 
 		alias /pdf;
 		autoindex on;
